--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script> -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
